# bevy_sly_blender

./: .gitignore  Cargo.toml  readme.md
addons/bevy_sly/: __init__.py  auto_export_tracker.py  blender_manifest.toml  component_definitions_list.py  components_meta.py  prop_groups.py  requirements.txt  settings.py  util.py
addons/bevy_sly/helpers/: collections.py  custom_scene_components.py  materials.py  object_makers.py
addons/bevy_sly/operators/: add_component.py  auto_export_gltf.py  copy_component.py  edit_collection.py  fix_component.py  generate_component_from_custom_property.py  generic_map_actions.py  open_assets_folder_browser.py  open_registry_file_brower.py  paste_component.py  refresh_custom_properties.py  rename_component.py  select_component_to_replace.py  select_object.py  toggle_component_visibility.py  tooling_switch.py
addons/bevy_sly/propGroups/: process_structs.py  prop_groups.py  utils.py
addons/bevy_sly/ui/: main.py  missing_types.py  scene_list.py
art/: basic-registry.json  basic.blend  basic.blend1  with-lib-registry.json  with-library.blend  with-library.blend1
assets/: registry.json
assets/blueprints/: library-cube.glb
assets/levels/: Basic.glb  BasicWithLib.glb  Scene.glb
assets/materials/: basic_materials_library.glb  simple_materials_library.glb  with-library_materials_library.glb
docs/: build.md  notes.md
examples/: basic.rs  with-library.rs
plugin/: __init__.py  assets_registry.py  auto_export_tracker.py  blueprints_registry.py  component_definitions_list.py  components_meta.py  components_registry.py  rename_helper.py  settings.py  util.py
plugin/auto_export/: auto_export.py  export_gltf.py  operators.py
plugin/helpers/: animations.py  assets.py  auto_export.py  blueprints.py  export_gltf.py  export_materials.py  generate_and_export.py  generate_complete_preferences_dict.py  helpers_scenes.py  levels.py  materials.py  serialize_scene.py
plugin/operators/: add_component.py  auto_export_gltf.py  clear_component_definitions_list.py  generic_map_actions.py  open_assets_folder_browser.py  open_schema_file_brower.py  paste_component.py  refresh_custom_properties.py  reload_registry.py  remove_component.py  remove_component_from_all_objects.py  rename_component.py  tooling_switch.py
plugin/propGroups/: conversions_from_prop_group.py  conversions_to_prop_group.py  process_component.py  process_enum.py  process_list.py  process_map.py  process_tupples.py  prop_groups.py
plugin/registry/: main.py  operators.py  registry.py
plugin/settings/: main.py
plugin/ui/: main.py  switch.py
scripts/: clear_glb.sh  delete_scene.py  fix_image_paths.py  scene_objects.py
src/: aabb.rs  animation.rs  assets.rs  blueprints.rs  components.rs  levels.rs  lib.rs  lighting.rs  materials.rs  physics.rs  registry.rs  ronstring_to_reflect_component.rs  spawn_from_blueprints.rs  spawn_post_process.rs
src/blueprints/: aabb.rs  materials.rs  mod.rs  spawn_from_blueprints.rs
src/components/: blender_settings.rs  mod.rs  process_gltfs.rs  ronstring_to_reflect_component.rs
src/components/blender_settings/: lighting.rs
src/registry/: export_types.rs  mod.rs
test/: default.gltf  instance.gltf  instance_collections.blend  instance_collections.blend1
