[package]
name = "bevy_sly_blender"
version = "0.1.0"
edition = "2021"


[features]
default = ["inspector", "registry", "physics"]
physics = [ "avian3d" ]
registry = [] # optional feature to enable the registry
inspector = [ "bevy-inspector-egui" ]
nested = [] # testing feature to test flat vs nested
animation = [] # optional feature to enable the animation system


[dependencies]
bevy = { version = "0.14" }
ron = "0.8.1"
serde = "1.0.202"
serde_json = "1.0.117"
bevy-inspector-egui = { version = "0.25", optional = true }
bevy_asset_loader = { version = "0.21" }

avian3d = { version = "0.1", optional = true }

# iter utils
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"


[patch.crates-io]
#bevy_xpbd_3d = { path = "../../f/bevy_xpbd/crates/bevy_xpbd_3d/" }