[package]
name = "bevy_sly_blender"
version = "0.1.0"
edition = "2021"


[features]
default = ["inspector", "nested"]
registry = [] # will write the registry to a file if enabled
inspector = [ "bevy-inspector-egui" ]

# testing
nested = [] # testing feature to test flat vs nested
dev = [ # Only in debug
  "bevy/bevy_dev_tools",
  "bevy/embedded_watcher",
  "bevy/file_watcher",
  "bevy/dynamic_linking",
  "bevy/asset_processor",
  # "bevy_registry_export",
]

[dependencies]
bevy = { version = "0.14" }

ron = "0.8.1"
serde = "1.0.202"
serde_json = "1.0.117"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"


bevy-inspector-egui = { version = "0.25", optional = true }
bevy_asset_loader = { version = "0.21",  optional = true }


[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["registry"] # requiering this so registy is created
